--- a/dev-academy/index.html
+++ b/dev-academy/index.html
@@ -7,103 +7,114 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=0" />
     <title>Jen Harper dev Academy</title>
     <link rel="icon" href="img/favicon.png" type="image/x-icon" />
-    <link rel="stylesheet" type="text/css" href="css/styles.css" />
+    <link href="../src/output.css" rel="stylesheet" />
   </head>
 
-  <body>
-    <div class="portfolio">
-      <div class="project zoltash">
-        <div class="visual">
-          <div>
-            <figure class="">
-              <img src="img/fortune.svg" alt="Zoltash hand of wisdom" class="main-vis" />
-            </figure>
-          </div>
-        </div>
-        <div class="content">
-          <div>
-            <p>Week Two, First Group Project</p>
-            <h2>The Wisdom of Zoltash</h2>
-            <p>
-              Wisdom of Zoltash, our tongue-in-cheek fortune-telling app, showcased our first two weeks of bootcamp learning. We utilized Handlebar templates and Express.js to generate dynamic HTML pages, displaying user input alongside relevant fortune-telling content. By employing JSON.parse and
-              JSON.stringify, we stored user data and retrieved it for future sessions. Using HTTP methods like POST and GET, we transmitted data to and from the server, providing a seamless user experience. Although we didn't complete the project on time, I continued working on it in my spare time,
-              expanding the user experience with additional categories.
-            </p>
+  <body class="bg-[#e9e4de]">
+    <main class="p-[20px] md:p-[6vw]">
+      <section class="flex flex-col py-[20px] md:py-[6vw] text-center items-center w-full group" id="dev-academy">
+        <p class="text-lg pb-[2vw] uppercase">Jan - April 2023</p>
+        <h1 class="pb-[4vw] text-4xl md:text-9xl leading-[1.1]"><span>Dev Academy</span> Aotearoa</h1>
+        <p class="md:w-[80%]">
+          In January 2023, Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, alias. Debitis necessitatibus earum tenetur voluptates sit. Ratione natus asperiores repudiandae illum maxime accusamus? Distinctio iste, facere quo ratione provident debitis! Lorem ipsum dolor sit amet,
+          consectetur adipisicing elit. Suscipit ullam rem, nostrum reprehenderit assumenda optio est dolorem pariatur, commodi soluta natus. Accusamus culpa iusto, doloremque natus laudantium rerum quam delectus.
+        </p>
+      </section>
 
-            <div>
-              <a href="https://github.com/jennifer-harper/wisdom-of-zoltash" target="_blank">
-                <button class="github">
-                  <i class="fa-brands fa-github fa-lg"></i>
-                  <p>See more on GitHub</p>
-                </button>
-              </a>
-              <a href="https://wisdom-of-zoltash.up.railway.app/" target="_blank">
-                <button class="deployed">
-                  <i class="fa-solid fa-globe"></i>
-                  <p>Deployed site</p>
-                </button>
-              </a>
+      <a href="https://github.com/jennifer-harper/wisdom-of-zoltash" target="_blank" class="py-[40px] md:py-[6vw] flex flex-col md:flex-row items-center text-center md:text-left" id="zoltash">
+        <div class="w-full md:w-[50%] mb-[20px] md:mb-0">
+          <figure class="">
+            <img src="img/fortune.svg" alt="Zoltash hand of wisdom" class="w-full" />
+          </figure>
+        </div>
+        <div class="w-full md:w-[50%]">
+          <p class="font-medium"><span class="uppercase">Week 2:</span> First Group Project</p>
+          <h2 class="pb-[4vw] text-3xl md:text-7xl leading-[1.1]">The Wisdom of Zoltash</h2>
+          <p>
+            Wisdom of Zoltash, our tongue-in-cheek fortune-telling app, showcased our first two weeks of bootcamp learning. We utilized Handlebar templates and Express.js to generate dynamic HTML pages, displaying user input alongside relevant fortune-telling content. By employing JSON.parse and
+            JSON.stringify, we stored user data and retrieved it for future sessions. Using HTTP methods like POST and GET, we transmitted data to and from the server, providing a seamless user experience. Although we didn't complete the project on time, I continued working on it in my spare time,
+            expanding the user experience with additional categories.
+          </p>
+
+          <div class="github mt-[20px] md:mt-[2vw]">
+            <div class="inline-flex flex-row items-center bg-blue-950 text-white px-[20px] py-[10px] hover:duration-200 hover:ease-in hover:bg-red-700">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="w-[20px] height-[20px] lg:w-[2vw] lg:h-[2vw] fill-white">
+                <path
+                  d="M12.026 2c-5.509 0-9.974 4.465-9.974 9.974 0 4.406 2.857 8.145 6.821 9.465.499.09.679-.217.679-.481 0-.237-.008-.865-.011-1.696-2.775.602-3.361-1.338-3.361-1.338-.452-1.152-1.107-1.459-1.107-1.459-.905-.619.069-.605.069-.605 1.002.07 1.527 1.028 1.527 1.028.89 1.524 2.336 1.084 2.902.829.091-.645.351-1.085.635-1.334-2.214-.251-4.542-1.107-4.542-4.93 0-1.087.389-1.979 1.024-2.675-.101-.253-.446-1.268.099-2.64 0 0 .837-.269 2.742 1.021a9.582 9.582 0 0 1 2.496-.336 9.554 9.554 0 0 1 2.496.336c1.906-1.291 2.742-1.021 2.742-1.021.545 1.372.203 2.387.099 2.64.64.696 1.024 1.587 1.024 2.675 0 3.833-2.33 4.675-4.552 4.922.355.308.675.916.675 1.846 0 1.334-.012 2.41-.012 2.737 0 .267.178.577.687.479C19.146 20.115 22 16.379 22 11.974 22 6.465 17.535 2 12.026 2z"
+                ></path>
+              </svg>
+              <p class="ms-10px md:ms-[1vw]">Project code on GitHub</p>
             </div>
           </div>
         </div>
+      </a>
+
+      <a href="https://github.com/kahu-2023/know-ur-ASSetts" target="_blank" class="py-[40px] md:py-[6vw] flex flex-col md:flex-row items-center text-center md:text-left" id="KYA">
+        <div class="w-full md:w-[50%] mb-[20px] md:mb-0">
+          <figure class="flex flex-col items-center">
+            <img src="img/cow.svg" alt="SVG graphic of cows behind" class="w-full md:w-[50%]" />
+          </figure>
+        </div>
+        <div class="w-full md:w-[50%]">
+          <p class="font-medium"><span class="uppercase">Week 4:</span> Friday Group Project</p>
+          <h2 class="pb-[4vw] text-3xl md:text-7xl leading-[1.1]">Know your ASSets</h2>
+          <p>
+            "Know Your ASSets" was built to apply our new skills in client-side rendering with React (with Typescript), composing UI components, managing component states, and event handling. We created a silly game with farm animals fart sounds and dynamic CSS changes to their semi-transparent fart
+            clouds. The game showcased our ability to work together as a team and apply our new skills in an entertaining and playful way. Overall, "Know Your ASSets" was a valuable learning opportunity that helped us hone our development skills while having fun.
+          </p>
+
+          <div class="github mt-[20px] md:mt-[2vw]">
+            <div class="inline-flex flex-row items-center bg-blue-950 text-white px-[20px] py-[10px] hover:duration-200 hover:ease-in hover:bg-red-700">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="w-[20px] height-[20px] lg:w-[2vw] lg:h-[2vw] fill-white">
+                <path
+                  d="M12.026 2c-5.509 0-9.974 4.465-9.974 9.974 0 4.406 2.857 8.145 6.821 9.465.499.09.679-.217.679-.481 0-.237-.008-.865-.011-1.696-2.775.602-3.361-1.338-3.361-1.338-.452-1.152-1.107-1.459-1.107-1.459-.905-.619.069-.605.069-.605 1.002.07 1.527 1.028 1.527 1.028.89 1.524 2.336 1.084 2.902.829.091-.645.351-1.085.635-1.334-2.214-.251-4.542-1.107-4.542-4.93 0-1.087.389-1.979 1.024-2.675-.101-.253-.446-1.268.099-2.64 0 0 .837-.269 2.742 1.021a9.582 9.582 0 0 1 2.496-.336 9.554 9.554 0 0 1 2.496.336c1.906-1.291 2.742-1.021 2.742-1.021.545 1.372.203 2.387.099 2.64.64.696 1.024 1.587 1.024 2.675 0 3.833-2.33 4.675-4.552 4.922.355.308.675.916.675 1.846 0 1.334-.012 2.41-.012 2.737 0 .267.178.577.687.479C19.146 20.115 22 16.379 22 11.974 22 6.465 17.535 2 12.026 2z"
+                ></path>
+              </svg>
+              <p class="ms-10px md:ms-[1vw]">Project code on GitHub</p>
+            </div>
+          </div>
+        </div>
+      </a>
+
+      <a href="https://github.com/kahu-2023/buddy" target="_blank" class="bg-blue-950 text-white py-[40px] md:py-[6vw] flex flex-col md:flex-row items-center my-[40px] md:my-[6vw] text-center md:text-left px-[20px] md:px-0" id="Buddy">
+        <div class="w-full md:w-[50%] mb-[20px] md:mb-0">
+          <figure class="flex flex-col items-center">
+            <img src="img/buddy.jpg" alt="Buddy app mockup" class="w-full md:w-[70%]" />
+          </figure>
+        </div>
+        <div class="w-full md:w-[50%] md:pe-[6vw]">
+          <p class="font-medium"><span class="uppercase">Week 8:</span> Final Project</p>
+          <h2 class="pb-[4vw] text-3xl md:text-7xl leading-[1.1]">Buddy</h2>
+          <p>
+            Our final project involved 7 team members and 6 days. Buddy is an app designed to connect international students with New Zealand locals, providing opportunities to make friends and be introduced to NZ culture. This project gave us the chance to put everything we had learnt over the
+            previous eight weeks into action. Our React app needed profiles with CRUD functionality, and a AuthO login setup. Only registered users with profiles have access to seeing other users, and only be able to edit their own profile. Working with a large team proved to be challenging but we
+            managed to achieve our MVP and present our project on showcase night.
+          </p>
+
+          <div class="github mt-[20px] md:mt-[2vw]">
+            <div class="inline-flex flex-row items-center hover:bg-red-400 text-white px-[20px] py-[10px] hover:duration-200 hover:ease-in bg-red-700">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="w-[20px] height-[20px] lg:w-[2vw] lg:h-[2vw] fill-white">
+                <path
+                  d="M12.026 2c-5.509 0-9.974 4.465-9.974 9.974 0 4.406 2.857 8.145 6.821 9.465.499.09.679-.217.679-.481 0-.237-.008-.865-.011-1.696-2.775.602-3.361-1.338-3.361-1.338-.452-1.152-1.107-1.459-1.107-1.459-.905-.619.069-.605.069-.605 1.002.07 1.527 1.028 1.527 1.028.89 1.524 2.336 1.084 2.902.829.091-.645.351-1.085.635-1.334-2.214-.251-4.542-1.107-4.542-4.93 0-1.087.389-1.979 1.024-2.675-.101-.253-.446-1.268.099-2.64 0 0 .837-.269 2.742 1.021a9.582 9.582 0 0 1 2.496-.336 9.554 9.554 0 0 1 2.496.336c1.906-1.291 2.742-1.021 2.742-1.021.545 1.372.203 2.387.099 2.64.64.696 1.024 1.587 1.024 2.675 0 3.833-2.33 4.675-4.552 4.922.355.308.675.916.675 1.846 0 1.334-.012 2.41-.012 2.737 0 .267.178.577.687.479C19.146 20.115 22 16.379 22 11.974 22 6.465 17.535 2 12.026 2z"
+                ></path>
+              </svg>
+              <p class="ms-10px md:ms-[1vw]">Project code on GitHub</p>
+            </div>
+          </div>
+        </div>
+      </a>
+
+      <div class="flex flex-row justify-center w-full">
+        <a href="/" class="inline-flex p-0 group" aria-label="Anchor tag to home page">
+          <figure class="p-0">
+            <svg x="0px" y="0px" viewBox="0 0 260.6 261.1" class="fill-red-700 w-[100px] h-[100px] lg:w-[6vw] lg:h-[6vw] group-hover:fill-red-400 group-hover:ease-in group-hover:duration-200">
+              <path
+                d="M130.3,3.6C60.3,3.6,3.6,60.8,3.6,130.8s56.7,126.7,126.7,126.7S257,200.8,257,130.8S200.3,3.6,130.3,3.6z M114.4,68.8h31.8 v91.7h-31.8V68.8z M72,68.8h31.8v22.3H72C72,91,72,68.8,72,68.8z M103.8,163.2c0,9.6-2.1,16.4-5.8,21.2c-4.2,5.3-11.7,8-21.2,8H72 v-91.7h31.8L103.8,163.2L103.8,163.2z M188.6,192.9h-74.2v-21.7h74.2V192.9z M188.6,161h-32.4v-60.4h5.3c14.3,0,22.8,4.8,26,14.8 c1.1,3.2,1.6,6.9,1.6,11.1V161H188.6z"
+              />
+            </svg>
+          </figure>
+        </a>
       </div>
-
-      <div class="project assets">
-        <div class="visual">
-          <div>
-            <figure class="">
-              <img src="img/cow.svg" alt="SVG graphic of cows behind" class="main-vis" />
-            </figure>
-          </div>
-        </div>
-        <div class="content">
-          <div>
-            <p>Week Four, Friday Group Project</p>
-            <h2>Know your ASSets</h2>
-            <p>
-              "Know Your ASSets" was built to apply our new skills in client-side rendering with React (with Typescript), composing UI components, managing component states, and event handling. We created a silly game with farm animals fart sounds and dynamic CSS changes to their semi-transparent
-              fart clouds. The game showcased our ability to work together as a team and apply our new skills in an entertaining and playful way. Overall, "Know Your ASSets" was a valuable learning opportunity that helped us hone our development skills while having fun.
-            </p>
-
-            <a href="https://github.com/kahu-2023/know-ur-ASSetts" target="_blank">
-              <button class="github">
-                <i class="fa-brands fa-github fa-lg"></i>
-                <p>See some assets on GitHub</p>
-              </button>
-            </a>
-          </div>
-        </div>
-      </div>
-
-      <div class="project buddy">
-        <div class="visual">
-          <div>
-            <figure class="">
-              <img src="img/buddy.jpg" alt="Buddy app mockup" class="main-vis" />
-            </figure>
-          </div>
-        </div>
-        <div class="content">
-          <div>
-            <p>Week Eight, Final Project</p>
-            <h2>Buddy</h2>
-            <p>
-              Our final project involved 7 team members and 6 days. Buddy is an app designed to connect international students with New Zealand locals, providing opportunities to make friends and be introduced to NZ culture. This project gave us the chance to put everything we had learnt over the
-              previous eight weeks into action. Our React app needed profiles with CRUD functionality, and a AuthO login setup. Only registered users with profiles have access to seeing other users, and only be able to edit their own profile. Working with a large team proved to be challenging but we
-              managed to achieve our MVP and present our project on showcase night.
-            </p>
-
-            <a href="https://github.com/kahu-2023/buddy" class="github" target="_blank">
-              <button class="github">
-                <i class="fa-brands fa-github fa-lg"></i>
-                <p>See more on GitHub</p>
-              </button>
-            </a>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <script src="https://kit.fontawesome.com/b3510dc66a.js" crossorigin="anonymous"></script>
+    </main>
   </body>
 </html>
