--- a/portfolio-spotzer/index.html
+++ b/portfolio-spotzer/index.html
@@ -25,29 +25,29 @@
     <section class="bg-[#040433] text-white flex flex-col items-center pb-[20px] md:pb-[6vw] md:mb-[6vw]">
       <div class="flex flex-col p-[20px] md:px-[4vw] md:py-[6vw] text-center items-center">
         <p class="text-lg">2017 - 2022</p>
-        <h2 class="text-2xl md:text-8xl pb-[4vw]">Career <br /><span>Highlights</span></h2>
+        <h2 class="text-3xl md:text-8xl pb-[4vw]">Career <br /><span>Highlights</span></h2>
         <p class="md:w-[80%]">
           As I grew towards becoming a Senior Designer within the company, I was given the opportunity to work on inhouse projects. Over time I worked directly with senior management in developing and rebranding our company's identity, as well as being the lead designer on the two project examples
           below.
         </p>
       </div>
 
-      <div class="flex flex-col p-[20px] md:px-[4vw] md:py-[6vw] text-center items-center bg-blue-900 w-[90%]">
-        <h3 class="text-1xl md:text-6xl pb-[4vw]"><span class="md:text-5xl"> Focus</span> Project<span class="md:text-5xl"> One</span></h3>
+      <div class="flex flex-col px-[20px] py-[40px] md:px-[4vw] md:py-[6vw] text-center items-center bg-blue-900 w-[90%]">
+        <h3 class="text-2xl md:text-6xl pb-[4vw]"><span class="md:text-5xl"> Focus</span> Project<span class="md:text-5xl"> One</span></h3>
         <p class="md:w-[80%]">
           In 2019 my logo and identity concept was chosen for a new digital product incentive. Providing customers with the opportunity to hire professional web designers to build their website, on the Wix platform, this product required a friendly, approachable, professional brand identity below.
         </p>
 
-        <a href="../portfolio-wixbuilders/" class="" target="_blank">
+        <a href="../portfolio-wixbuilders/" class="mt-[40px] hover:text-red-400 hover:duration-200 duration-200 hover:ease-in hover:fill-red-400 fill-red-700" target="_blank">
           <div class="flex flex-row w-full justify-center items-center">
-            <svg x="0px" y="0px" viewBox="0 0 500 500" class="w-[30px] md:w-[6vw] fill-red-700">
+            <svg x="0px" y="0px" viewBox="0 0 500 500" class="w-[60px] md:w-[6vw] animate-[spin_3s_linear_infinite]">
               <path
                 class="asterisk"
                 d="M266.8,178.2c0-14.7-5.7-22.1-17-22.1c-11.3,0-16.9,7.4-16.9,22.1c0,2.7,0.4,5.7,1,8.7l8.2,39c0.7,3.4,1,6,1,7.7 c0,2-0.9,3.1-2.6,3.1c-1,0-3.6-1.9-7.7-5.7l-29.8-28.1c-6.2-5.9-13-8.8-20.5-8.8c-11.3,0-16.9,5-16.9,14.9c0,9.6,6.7,17,20.2,22.2 l38.3,14.4c5.9,2.1,8.8,4.1,8.8,6.2c0,1.4-2.9,3.3-8.8,5.7L185.8,272c-13.4,5.2-20.2,12.7-20.2,22.7c0,9.9,5.5,14.9,16.4,14.9 c7.5,0,14.5-3.1,21-9.3l29.8-27.7c4.1-3.8,6.7-5.7,7.7-5.7c1.7,0,2.6,1,2.6,3.1c0,1.7-0.4,4.3-1,7.7l-8.2,39c-0.7,3.1-1,6-1,8.7 c0,14.4,5.7,21.6,16.9,21.6c11.3,0,17-7.2,17-21.6c0-2.4-0.4-5.3-1.1-8.7l-7.7-39l-1.1-6.2v-2c0-1.7,0.9-2.6,2.6-2.6  c1,0,3.6,1.9,7.7,5.7l29.8,27.7c6.5,6.2,13.3,9.3,20.5,9.3c11.3,0,17-5.1,17-15.4c0-9.6-6.7-17-20.2-22.1l-38.8-14.4 c-5.8-2.4-8.8-4.3-8.8-5.7c0-1.7,2.9-3.8,8.8-6.2l38.8-14.4c13.4-5.1,20.2-12.7,20.2-22.6s-5.7-14.9-17-14.9 c-7.2,0-14,3.1-20.5,9.2l-29.8,27.7c-4.1,3.8-6.7,5.7-7.7,5.7c-1.7,0-2.6-0.9-2.6-2.6l8.7-47.2 C266.4,183.5,266.8,180.6,266.8,178.2L266.8,178.2z"
               />
             </svg>
             <p class="">See more about this project</p>
-            <svg x="0px" y="0px" viewBox="0 0 500 500" class="w-[30px] md:w-[6vw] fill-red-700">
+            <svg x="0px" y="0px" viewBox="0 0 500 500" class="w-[60px] md:w-[6vw] animate-[spin_3s_linear_infinite_reverse]">
               <path
                 class="asterisk"
                 d="M266.8,178.2c0-14.7-5.7-22.1-17-22.1c-11.3,0-16.9,7.4-16.9,22.1c0,2.7,0.4,5.7,1,8.7l8.2,39c0.7,3.4,1,6,1,7.7 c0,2-0.9,3.1-2.6,3.1c-1,0-3.6-1.9-7.7-5.7l-29.8-28.1c-6.2-5.9-13-8.8-20.5-8.8c-11.3,0-16.9,5-16.9,14.9c0,9.6,6.7,17,20.2,22.2 l38.3,14.4c5.9,2.1,8.8,4.1,8.8,6.2c0,1.4-2.9,3.3-8.8,5.7L185.8,272c-13.4,5.2-20.2,12.7-20.2,22.7c0,9.9,5.5,14.9,16.4,14.9 c7.5,0,14.5-3.1,21-9.3l29.8-27.7c4.1-3.8,6.7-5.7,7.7-5.7c1.7,0,2.6,1,2.6,3.1c0,1.7-0.4,4.3-1,7.7l-8.2,39c-0.7,3.1-1,6-1,8.7 c0,14.4,5.7,21.6,16.9,21.6c11.3,0,17-7.2,17-21.6c0-2.4-0.4-5.3-1.1-8.7l-7.7-39l-1.1-6.2v-2c0-1.7,0.9-2.6,2.6-2.6  c1,0,3.6,1.9,7.7,5.7l29.8,27.7c6.5,6.2,13.3,9.3,20.5,9.3c11.3,0,17-5.1,17-15.4c0-9.6-6.7-17-20.2-22.1l-38.8-14.4 c-5.8-2.4-8.8-4.3-8.8-5.7c0-1.7,2.9-3.8,8.8-6.2l38.8-14.4c13.4-5.1,20.2-12.7,20.2-22.6s-5.7-14.9-17-14.9 c-7.2,0-14,3.1-20.5,9.2l-29.8,27.7c-4.1,3.8-6.7,5.7-7.7,5.7c-1.7,0-2.6-0.9-2.6-2.6l8.7-47.2 C266.4,183.5,266.8,180.6,266.8,178.2L266.8,178.2z"
@@ -55,28 +55,28 @@
             </svg>
           </div>
 
-          <div class="flex flex-col md:flex-row mt-[4vw]">
-            <img src="img/wix-one.webp" alt="xx" class="w-full pb-[10px] md:pb-0 md:pe-[1vw]" />
-            <img src="img/wix-two.webp" alt="xx" class="w-full pb-[10px] md:pb-0 md:px-[.5vw]" />
-            <img src="img/wix-three.webp" alt="xx" class="w-full md:ps-[1vw]" />
+          <div class="flex flex-col md:flex-row mt-[40px] md:mt-[4vw]">
+            <img src="img/wix-one.webp" alt="xx" class="w-full pb-[10px] md:pb-0 md:pe-[1vw] hover:scale-95 hover:duration-200 hover:ease-in duration-200 ease-in" />
+            <img src="img/wix-two.webp" alt="xx" class="w-full pb-[10px] md:pb-0 md:px-[.5vw] hover:scale-95 hover:duration-200 hover:ease-in duration-200 ease-in" />
+            <img src="img/wix-three.webp" alt="xx" class="w-full md:ps-[1vw] hover:scale-95 hover:duration-200 hover:ease-in duration-200 ease-in" />
           </div>
         </a>
       </div>
 
-      <div class="flex flex-col p-[20px] md:px-[4vw] md:py-[6vw] text-center items-center w-[90%] mb-[4vw]">
-        <h3 class="text-1xl md:text-6xl pb-[4vw]"><span class="md:text-5xl"> Focus</span> Project<span class="md:text-5xl"> Two</span></h3>
+      <div class="flex flex-col p-[20px] md:px-[4vw] md:py-[6vw] text-center items-center w-[90%] my-[40px] md:my-[4vw]">
+        <h3 class="text-2xl md:text-6xl pb-[4vw]"><span class="md:text-5xl"> Focus</span> Project<span class="md:text-5xl"> Two</span></h3>
         <p class="md:w-[80%]">In 2021 we released the 'Agency Product', an outsourcing solution for digital marketing agencies across Europe. I was lead designer for the brand identity and building the digital product.</p>
 
-        <a href="../portfolio-spotzer-agency/" class="w-full group" target="_blank">
+        <a href="../portfolio-spotzer-agency/" class="mt-[40px] w-full fill-red-700 hover:fill-red-400 hover:text-red-400 duration-200 hover:duration-200 ease-in group" target="_blank">
           <div class="flex flex-row w-full justify-center items-center">
-            <svg x="0px" y="0px" viewBox="0 0 500 500" class="w-[30px] md:w-[6vw] fill-red-700">
+            <svg x="0px" y="0px" viewBox="0 0 500 500" class="w-[60px] md:w-[6vw] animate-[spin_3s_linear_infinite_reverse]">
               <path
                 class="asterisk"
                 d="M266.8,178.2c0-14.7-5.7-22.1-17-22.1c-11.3,0-16.9,7.4-16.9,22.1c0,2.7,0.4,5.7,1,8.7l8.2,39c0.7,3.4,1,6,1,7.7 c0,2-0.9,3.1-2.6,3.1c-1,0-3.6-1.9-7.7-5.7l-29.8-28.1c-6.2-5.9-13-8.8-20.5-8.8c-11.3,0-16.9,5-16.9,14.9c0,9.6,6.7,17,20.2,22.2 l38.3,14.4c5.9,2.1,8.8,4.1,8.8,6.2c0,1.4-2.9,3.3-8.8,5.7L185.8,272c-13.4,5.2-20.2,12.7-20.2,22.7c0,9.9,5.5,14.9,16.4,14.9 c7.5,0,14.5-3.1,21-9.3l29.8-27.7c4.1-3.8,6.7-5.7,7.7-5.7c1.7,0,2.6,1,2.6,3.1c0,1.7-0.4,4.3-1,7.7l-8.2,39c-0.7,3.1-1,6-1,8.7 c0,14.4,5.7,21.6,16.9,21.6c11.3,0,17-7.2,17-21.6c0-2.4-0.4-5.3-1.1-8.7l-7.7-39l-1.1-6.2v-2c0-1.7,0.9-2.6,2.6-2.6  c1,0,3.6,1.9,7.7,5.7l29.8,27.7c6.5,6.2,13.3,9.3,20.5,9.3c11.3,0,17-5.1,17-15.4c0-9.6-6.7-17-20.2-22.1l-38.8-14.4 c-5.8-2.4-8.8-4.3-8.8-5.7c0-1.7,2.9-3.8,8.8-6.2l38.8-14.4c13.4-5.1,20.2-12.7,20.2-22.6s-5.7-14.9-17-14.9 c-7.2,0-14,3.1-20.5,9.2l-29.8,27.7c-4.1,3.8-6.7,5.7-7.7,5.7c-1.7,0-2.6-0.9-2.6-2.6l8.7-47.2 C266.4,183.5,266.8,180.6,266.8,178.2L266.8,178.2z"
               />
             </svg>
             <p class="">See more about this project</p>
-            <svg x="0px" y="0px" viewBox="0 0 500 500" class="w-[30px] md:w-[6vw] fill-red-700">
+            <svg x="0px" y="0px" viewBox="0 0 500 500" class="w-[60px] md:w-[6vw] animate-[spin_3s_linear_infinite]">
               <path
                 class="asterisk"
                 d="M266.8,178.2c0-14.7-5.7-22.1-17-22.1c-11.3,0-16.9,7.4-16.9,22.1c0,2.7,0.4,5.7,1,8.7l8.2,39c0.7,3.4,1,6,1,7.7 c0,2-0.9,3.1-2.6,3.1c-1,0-3.6-1.9-7.7-5.7l-29.8-28.1c-6.2-5.9-13-8.8-20.5-8.8c-11.3,0-16.9,5-16.9,14.9c0,9.6,6.7,17,20.2,22.2 l38.3,14.4c5.9,2.1,8.8,4.1,8.8,6.2c0,1.4-2.9,3.3-8.8,5.7L185.8,272c-13.4,5.2-20.2,12.7-20.2,22.7c0,9.9,5.5,14.9,16.4,14.9 c7.5,0,14.5-3.1,21-9.3l29.8-27.7c4.1-3.8,6.7-5.7,7.7-5.7c1.7,0,2.6,1,2.6,3.1c0,1.7-0.4,4.3-1,7.7l-8.2,39c-0.7,3.1-1,6-1,8.7 c0,14.4,5.7,21.6,16.9,21.6c11.3,0,17-7.2,17-21.6c0-2.4-0.4-5.3-1.1-8.7l-7.7-39l-1.1-6.2v-2c0-1.7,0.9-2.6,2.6-2.6  c1,0,3.6,1.9,7.7,5.7l29.8,27.7c6.5,6.2,13.3,9.3,20.5,9.3c11.3,0,17-5.1,17-15.4c0-9.6-6.7-17-20.2-22.1l-38.8-14.4 c-5.8-2.4-8.8-4.3-8.8-5.7c0-1.7,2.9-3.8,8.8-6.2l38.8-14.4c13.4-5.1,20.2-12.7,20.2-22.6s-5.7-14.9-17-14.9 c-7.2,0-14,3.1-20.5,9.2l-29.8,27.7c-4.1,3.8-6.7,5.7-7.7,5.7c-1.7,0-2.6-0.9-2.6-2.6l8.7-47.2 C266.4,183.5,266.8,180.6,266.8,178.2L266.8,178.2z"
@@ -166,9 +166,9 @@
         </a>
       </div>
 
-      <div class="flex flex-col p-[20px] md:px-[4vw] md:py-[6vw] text-center items-center bg-blue-900 w-[90%]">
+      <div class="flex flex-col px-[20px] py-[40px] md:px-[4vw] md:py-[6vw] text-center items-center bg-blue-900 w-[90%]">
         <img src="img/logo-white.svg" alt="'company logo image" class="w-[200px] md:w-[18vw]" />
-        <h2 class="text-2xl md:text-8xl pb-[4vw]">Employee <br /><span>of the Month</span></h2>
+        <h2 class="text-3xl md:text-8xl pb-[4vw]">Employee <br /><span>of the Month</span></h2>
         <p class="md:w-[80%] text-lg mb-[2vw]">
           "Jennifer is our rock. There is not one issue she cannot solve. Her sharp mind, precision, and critical thinking combined with her willingness to help make her an absolute legend. Jennifer is always consistent and does all she can to help and improve the business as a whole. Thank you,
           Jennifer!"
@@ -184,8 +184,8 @@
     </section>
 
     <section class="md:mb-[6vw]">
-      <div class="flex flex-col p-[20px] md:px-[4vw] md:py-[6vw] text-center items-center">
-        <h2 class="text-2xl md:text-8xl pb-[4vw]">Showcase<br /><span>Examples</span></h2>
+      <div class="flex flex-col px-[20px] py-[60px] md:px-[4vw] md:py-[6vw] text-center items-center">
+        <h2 class="text-3xl md:text-8xl pb-[4vw]">Showcase<br /><span>Examples</span></h2>
         <p class="md:w-[80%]">
           Ongoing projects within the company included creating showcase websites for our major partners. From basic 3 pages, to complex eCommerce websites I produced a range of quality products that targeted SMEs across Europe, United Kingdom, United States and Australia. Below you can see three
           showcase examples I designed and built, using Wordpress, that followed the guidelines and UX specifics of various partners.
@@ -193,20 +193,20 @@
       </div>
       <div class="flex flex-col md:flex-row mt-[4vw] w-full">
         <a href="http://des3296.wpengine.com/" target="_blank">
-          <img src="img/sc-01.jpg" class="w-full pb-[10px] md:pb-0 md:pe-[1vw]" alt="Showcase sample site" />
+          <img src="img/sc-01.jpg" class="w-full pb-[10px] md:pb-0 md:pe-[1vw] hover:scale-95 hover:duration-200 hover:ease-in duration-200 ease-in" alt="Showcase sample site" />
         </a>
         <a href="http://des3313.wpengine.com/" target="_blank">
-          <img src="img/sc-02.jpg" class="w-full pb-[10px] md:pb-0 md:px-[.5vw]" alt="Showcase sample site" />
+          <img src="img/sc-02.jpg" class="w-full pb-[10px] md:pb-0 md:px-[.5vw] hover:scale-95 hover:duration-200 hover:ease-in duration-200 ease-in" alt="Showcase sample site" />
         </a>
         <a href="https://spotzerdig2.wpengine.com/" target="_blank">
-          <img src="img/sc-04.jpg" class="w-full md:ps-[1vw]" alt="Showcase sample site" />
+          <img src="img/sc-04.jpg" class="w-full md:ps-[1vw] hover:scale-95 hover:duration-200 hover:ease-in duration-200 ease-in" alt="Showcase sample site" />
         </a>
       </div>
     </section>
 
     <section>
-      <div class="flex flex-col p-[20px] md:px-[4vw] md:py-[6vw] text-center items-center">
-        <h2 class="text-2xl md:text-8xl pb-[4vw]">Vendor<br /><span>Templates</span></h2>
+      <div class="flex flex-col px-[20px] py-[60px] md:px-[4vw] md:py-[6vw] text-center items-center">
+        <h2 class="text-3xl md:text-8xl pb-[4vw]">Vendor<br /><span>Templates</span></h2>
         <p class="md:w-[80%]">
           Building CMS specific templates, creating training documentation, QA reviewing website builds, or helping with platform issues was an ongoing responsibility to speed up weekly production and improve design quality from our offshore vendors. Below are three of the ten template examples I
           helped produce for a large German telco partner on the <a href="https://www.monosolutions.com/" target="_blank">Mono Solutions</a> platforms.
@@ -214,15 +214,27 @@
       </div>
       <div class="flex flex-col md:flex-row mt-[4vw] w-full">
         <a href="https://u1266137.mono.net/" target="_blank">
-          <img src="img/temp-04.jpg" class="w-full pb-[10px] md:pb-0 md:pe-[1vw]" alt="Showcase sample site" />
+          <img src="img/temp-04.jpg" class="w-full pb-[10px] md:pb-0 md:pe-[1vw] hover:scale-95 hover:duration-200 hover:ease-in duration-200 ease-in" alt="Showcase sample site" />
         </a>
         <a href="https://u1266137.mono.net/" target="_blank">
-          <img src="img/temp-07.jpg" class="w-full pb-[10px] md:pb-0 md:px-[.5vw]" alt="Showcase sample site" />
+          <img src="img/temp-07.jpg" class="w-full pb-[10px] md:pb-0 md:px-[.5vw] hover:scale-95 hover:duration-200 hover:ease-in duration-200 ease-in" alt="Showcase sample site" />
         </a>
         <a href="https://u1266137.mono.net/" target="_blank">
-          <img src="img/temp-05.jpg" class="w-full md:ps-[1vw]" alt="Showcase sample site" />
+          <img src="img/temp-05.jpg" class="w-full md:ps-[1vw] hover:scale-95 hover:duration-200 hover:ease-in duration-200 ease-in" alt="Showcase sample site" />
         </a>
       </div>
     </section>
+
+    <div class="flex flex-row justify-center w-full mt-[40px] md:mt-[6vw]">
+      <a href="/" class="inline-flex p-0 group" aria-label="Anchor tag to home page">
+        <figure class="p-0">
+          <svg x="0px" y="0px" viewBox="0 0 260.6 261.1" class="fill-red-700 w-[100px] h-[100px] lg:w-[6vw] lg:h-[6vw] group-hover:fill-red-400 group-hover:ease-in group-hover:duration-200">
+            <path
+              d="M130.3,3.6C60.3,3.6,3.6,60.8,3.6,130.8s56.7,126.7,126.7,126.7S257,200.8,257,130.8S200.3,3.6,130.3,3.6z M114.4,68.8h31.8 v91.7h-31.8V68.8z M72,68.8h31.8v22.3H72C72,91,72,68.8,72,68.8z M103.8,163.2c0,9.6-2.1,16.4-5.8,21.2c-4.2,5.3-11.7,8-21.2,8H72 v-91.7h31.8L103.8,163.2L103.8,163.2z M188.6,192.9h-74.2v-21.7h74.2V192.9z M188.6,161h-32.4v-60.4h5.3c14.3,0,22.8,4.8,26,14.8 c1.1,3.2,1.6,6.9,1.6,11.1V161H188.6z"
+            />
+          </svg>
+        </figure>
+      </a>
+    </div>
   </body>
 </html>
