--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
 
   <body class="bg-[#e9e4de] text-[#040433] text-[1em]">
-    <nav class="flex flex-col md:flex-row items-center justify-between w-full py-[10px] px-[20px] bg-red-400 fixed top-0 left-0 z-100">
+    <!-- <nav class="flex flex-col md:flex-row items-center justify-between w-full py-[10px] px-[20px] bg-red-400 fixed top-0 left-0 z-100">
       <a href="/" class="flex flex-row items-center p-0 group">
         <figure class="p-0">
           <svg x="0px" y="0px" viewBox="0 0 260.6 261.1" class="fill-red-200 w-[100px] h-[100px] lg:w-[6vw] lg:h-[6vw] hover:fill-red-700 group-hover:ease-in group-hover:duration-200">
@@ -42,7 +42,7 @@
           </a>
         </li>
 
-        <!-- <li class="pe-[10px] lg:pe-[1vw]">
+        <li class="pe-[10px] lg:pe-[1vw]">
           <a href="img/jennifer-harper-cv.pdf" target="_blank">
             <svg x="0px" y="0px" viewBox="0 0 50 50" class="w-[20px] height-[20px] lg:w-[2vw] lg:h-[2vw] fill-red-200 hover:fill-red-400 hover:duration-200 hover:ease-in">
               <path
@@ -50,9 +50,9 @@
               />
             </svg>
           </a>
-        </li> -->
+        </li>
       </ul>
-    </nav>
+    </nav> -->
 
     <main class="p-[20px] md:p-[6vw]">
       <section class="flex flex-col py-[20px] md:py-[9vw] text-center items-center w-full" id="me">
